Fixed wrapping of users e-mail addresses Fixes #19

--- a/jacJarSoft.noteArkiv.webapp/WebContent/css/notearkiv.css
+++ b/jacJarSoft.noteArkiv.webapp/WebContent/css/notearkiv.css
@@ -160,7 +160,10 @@ fieldset.voices-border {
 select.tagsSelect {
 	width: 10em
 }
-
+.wrap { 
+   white-space: pre-wrap;      /* CSS3 */   
+   word-wrap: break-word;      /* IE */
+}
 div.messageBox {
     border: 1px solid;
     border-radius: 3px;
